--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 {% block title %} Запчасти на ВАЗ | Автозапчасти для ВАЗ | Крашеные запчасти {% endblock %}
 
 {% block extended_head %}
+	<meta name="telderi" content="68d9371d08d1dd4aaf337d9660abb72d" />
     {{ header_content|safe }}
 {% endblock %}
 
