--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 			</div><!--#contacts-->
 				<div class="phone">
 						<h4>Телефон:</h4>
-						<p class="number"><span>+7 (926)</span> 652-23-33  </p>
+						<p class="number"><span>+7 (926)</span> 836-12-36  </p>
 						<p class="number">Мы находимся в Москве</p>
 				</div><!--#phone-->
 				<div id="entry">
@@ -185,14 +185,21 @@
 						     
 						 <tr>
 						     <td class="right">skype </td>
-							 <td>navaz</td>
+							 <td>ann_kpx</td>
 						</tr>
 						<tr><td class="right">email </td>
-							<td><a href="mailto:info@navaz.ru">info@navaz.ru</a></td>
+							<td><a href="mailto:info@navaz.ru">annkpx@gmail.com</a></td>
 						</tr>
+						<tr><td class="right">ИП </td>
+                                                        <td>Крханбарова А.Р.</td>
+                                                </tr>
+						<tr><td class="right">ОГРНИП</td>
+                                                        <td>312774616501177</td>
+                                                </tr>
+
 					</table>
 				    <div class="phone-foot">		<h4>Телефоны:</h4>
-							<p class="number"><span>+7 (926)</span> 652-23-33 </p>
+							<p class="number"><span>+7 (926)</span> 836-12-36 </p>
 					</div><!--.phone-foot-->
 			  </div><!--.foot-->
 			  <div class="foot"><ul>
