--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 	  <title>{% block title %} Запчасти на ВАЗ {% endblock %}</title>
 	  <meta name="description" content="" />
 	  <meta name="keywords" content="" />
+	<meta name="telderi" content="68d9371d08d1dd4aaf337d9660abb72d" />
 	  <link rel="stylesheet" href="/static/styles/style.css">
 	  <script src="/static/js/jquery-1.7.2.min.js"></script>
 	<script src="/static/js/slides.min.jquery.js"></script>
@@ -66,7 +67,7 @@
 				<div class="phone">
 						<h4>Телефон:</h4>
 						<p class="number"><span>+7 (926)</span> 836-12-36  </p>
-						<p class="number">Мы находимся в Москве</p>
+						<h4>Магазин не работает.<br /> Только по вопросам сотрудничества.</h4>
 				</div><!--#phone-->
 				<div id="entry">
 					{% if not user.is_authenticated %}
@@ -200,6 +201,7 @@
 					</table>
 				    <div class="phone-foot">		<h4>Телефоны:</h4>
 							<p class="number"><span>+7 (926)</span> 836-12-36 </p>
+							<h4>Магазин не работает.<br /> Только по вопросам сотрудничества.</h4>
 					</div><!--.phone-foot-->
 			  </div><!--.foot-->
 			  <div class="foot"><ul>
