--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 {% block content %}
 			<div id="container">
 				<div id="content">
-					<h2>ИНТЕРНЕТ-МАГАЗИН ПРОДАЕТСЯ!</h2> 
+					<h2>Продаю / Сдаю в аренду / Ищу партнера</h2> 
 					{{ about|safe }}
 					  <figure><h5>Добро пожаловать в онлайн магазин запчастей для автомобилей ВАЗ!</h5>
 							 <div class="d-carousel">
