--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
 			</div><!--#contacts-->
 				<div class="phone">
 						<h4>Телефон:</h4>
-						<p class="number"><span>+7 (926)</span> 836-12-36  </p>
+						<p class="number"><span>+7 (---)</span> ---------  </p>
 						<h4>Магазин не работает.<br /> Только по вопросам сотрудничества.</h4>
 				</div><!--#phone-->
 				<div id="entry">
@@ -162,10 +162,28 @@
                             </div>
                         {% endfor %}
                     {% endif %}
-                    
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Navaz -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3083633813891120"
+     data-ad-slot="9489159290"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>                    
 		  {% block content %}
 		  
 		  {% endblock %}
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Navaz -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3083633813891120"
+     data-ad-slot="9489159290"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	<!--s_links--><!--check code--><!--/s_links-->
 	</div><!-- #middle-->
 
 	<footer>
@@ -223,8 +241,7 @@
 (function (d, w, c) {
     (w[c] = w[c] || []).push(function() {
         try {
-            w.yaCounter17524120 = new Ya.Metrika({id:17524120,
-                    webvisor:true,
+            w.yaCounter29352330 = new Ya.Metrika({id:29352330,
                     clickmap:true,
                     trackLinks:true,
                     accurateTrackBounce:true});
@@ -243,8 +260,7 @@
     } else { f(); }
 })(document, window, "yandex_metrika_callbacks");
 </script>
-<noscript><div><img src="//mc.yandex.ru/watch/17524120" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-      
+<noscript><div><img src="//mc.yandex.ru/watch/29352330" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->      
    </body>
 </html>
