--- a/templates/home.html
+++ b/templates/home.html
@@ -61,6 +61,7 @@
 
 			  <aside>
 				<h2>Новости</h2>
+<a rel="nofollow" target="_blank" href="http://www.ozon.ru/context/cargoods/?partner=ВАШ_ПАРТНЕРСКИЙ_ИДЕНТИФИКАТОР&from=prt_banner_4249_19122014"><img src="//static.ozone.ru/graphics/partner_banners/141219_prt_ban_a_250x250.jpg" alt="Ozon.ru" border="0"></a>
 					{% for n in news %}
 						<article>
 							<time pubedate>{{ n.date.date }}</time>
