--- a/templates/item.html
+++ b/templates/item.html
@@ -14,7 +14,8 @@
 				  &#8722; <a href="/catalog?car_model={{ item.car_model.id }}&category={{ item.category.id }}">{{ item.category.name }}</a> 
 				  &#8722; {{ item.name }}</p>
 				  
-				  <div class="item first"><img {% if item.image %} src="/media/{{ item.image }}" style='max-height: 214px; max-width: 217px' {% else %} src="/static/images/carburator.jpg" {% endif %} alt="{{ item.name }} на {{ item.car_model.full_name }}"></div>
+				  <div class="item first">
+<a rel="nofollow" target="_blank" href="http://www.ozon.ru/catalog/1175684/?store=1&sort=rate&partner=ВАШ_ПАРТНЕРСКИЙ_ИДЕНТИФИКАТОР&from=prt_banner_4255_20012015&utm_source=ВАШ_ПАРТНЁРСКИЙ_ИДЕНТИФИКАТОР&utm_medium=partner&utm_campaign=SubPartnerID&utm_content=prt_banner_4255_20012015"><img src="//static.ozone.ru/graphics/partner_banners/150120_prt_ban_c_250x250.jpg" alt="Ozon.ru" border="0"></a></div>
 				  <div class="item second"><h4>{{ item.name }} на {{ item.car_model.full_name }}</h4><p>{{ item.description }} </p></div>
 				  <div class="item third">
 						  <table id="description" rules="all"  border="1">
